<?xml version="1.0" encoding="utf-8"?><!-- 全键盘-26-字母 -->
<Keyboard
    bg_res="@drawable/main_bg"
    key_bg_res="@drawable/key_bg_rectangle"
    key_height="@dimen/px100"
    key_left_padding="@dimen/px10"
    key_press_res="@drawable/softkey_bg_press2"
    key_select_res="@drawable/softkey_bg_select2"
    key_text_color="#b8bbbf"
    key_text_size="@dimen/px60"
    key_top_padding="@dimen/px10"
    key_width="@dimen/px98"
    left_right_move="true"
    qwerty="true"
    qwerty_uppercase="false"
    top_bottom_move="true">
    <row>
        <keys
            codes="8|9|10|11|12"
            labels="1|2|3|4|5"
            splitter="|" />

        <!-- 返回-退出输入法 -->
        <key
            key_code="@string/keycode_back"
            key_icon="@drawable/quit_skb" />
    </row>
    <row>
        <keys
            codes="13|14|15|16|7"
            labels="6|7|8|9|0"
            splitter="|" />
        <!-- 删除 -->
        <key
            key_code="@string/keycode_del"
            key_icon="@drawable/delete" />
    </row>
    <!-- 第一行 -->
    <row>

        <keys
            codes="45|51|33|46|48"
            labels="Q|W|E|R|T"
            splitter="|" />
        <!-- 状态按钮测试 -->
        <toggle_key key_code="@string/toggle_keycode_case">
            <state
                key_icon="@drawable/daxie"
                key_label="大写"
                state_id="@string/toggle_en_upper" />
            <state
                key_icon="@drawable/xiaoxie"
                key_label="小写"
                state_id="@string/toggle_en_lower" />
        </toggle_key>
    </row>
    <row>
        <keys
            codes="53|49|37|43|44"
            labels="Y|U|I|O|P"
            splitter="|" />
        <key
            key_icon="@drawable/dou_hao_e"
            key_label="," />
    </row>

    <row>
        <keys
            codes="29|47|32|34|35"
            labels="A|S|D|F|G"
            splitter="|" />
        <key
            key_icon="@drawable/ju_hao_e"
            key_label="." />
    </row>

    <!-- 第二行 -->
    <row>
        <keys
            codes="36|38|39|40|54"
            labels="H|J|K|L|Z"
            splitter="|" />
        <!-- 回车 -->
        <toggle_key
            key_code="@string/keycode_center"
            key_text_size="@dimen/px30">
            <state
                key_label="@string/enter_go"
                state_id="@string/toggle_enter_go" />
            <state
                key_icon="@drawable/g_search_icon"
                state_id="@string/toggle_enter_search" />
            <state
                key_label="@string/enter_send"
                state_id="@string/toggle_enter_send" />
            <state
                key_label="@string/enter_next"
                key_text_size="@dimen/px28"
                state_id="@string/toggle_enter_next" />
            <state
                key_label="@string/enter_text"
                state_id="@string/toggle_enter_done" />
            <state
                key_label="@string/enter_mulit_line_text"
                state_id="@string/toggle_enter_multi_line_done" />
        </toggle_key>
    </row>
    <row>
        <keys
            codes="52|31|50|30|42|41"
            labels="X|C|V|B|N|M"
            splitter="|" />
    </row>
</Keyboard>